deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jubeth-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jubeth-app
  template:
    metadata:
      labels:
        app: jubeth-app
    spec:
      containers:
      - name: jubeth-app
        image: jubeth-app:v1  # The image we loaded earlier
        imagePullPolicy: Never # Use local image, don't pull from internet
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: jubeth-app-service
  namespace: default
spec:
  selector:
    app: jubeth-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
